# model/account.go
@@ -1,8 +1,8 @@
 package model
 
 import (
-	"errors"
-	"fmt"
+	// "errors"
+	// "fmt"
 
 	uuid "github.com/gofrs/uuid"
 	"gorm.io/gorm"
@@ -17,9 +17,9 @@ type Account struct {
 }
 
 // example
-var (
-	ErrNameInvalid = errors.New("name is empty")
-)
+// var (
+// 	ErrNameInvalid = errors.New("name is empty")
+// )
 
 // AddAccount example
 type AddAccount struct {
@@ -27,14 +27,14 @@ type AddAccount struct {
 }
 
 // Validation example
-func (a AddAccount) Validation() error {
-	switch {
-	case len(a.Name) == 0:
-		return ErrNameInvalid
-	default:
-		return nil
-	}
-}
+// func (a AddAccount) Validation() error {
+// 	switch {
+// 	case len(a.Name) == 0:
+// 		return ErrNameInvalid
+// 	default:
+// 		return nil
+// 	}
+// }
 
 // UpdateAccount example
 type UpdateAccount struct {
@@ -42,73 +42,55 @@ type UpdateAccount struct {
 }
 
 // Validation example
-func (a UpdateAccount) Validation() error {
-	switch {
-	case len(a.Name) == 0:
-		return ErrNameInvalid
-	default:
-		return nil
-	}
-}
+// func (a UpdateAccount) Validation() error {
+// 	switch {
+// 	case len(a.Name) == 0:
+// 		return ErrNameInvalid
+// 	default:
+// 		return nil
+// 	}
+// }
 
 // AccountsAll example
-func AccountsAll(q string) ([]Account, error) {
-	if q == "" {
-		return accounts, nil
-	}
-	as := []Account{}
-	for k, v := range accounts {
-		if q == v.Name {
-			as = append(as, accounts[k])
-		}
-	}
-	return as, nil
-}
+// func AccountsAll(q string) ([]Account, error) {
+// 	if q == "" {
+// 		return accounts, nil
+// 	}
+// 	as := []Account{}
+// 	for k, v := range accounts {
+// 		if q == v.Name {
+// 			as = append(as, accounts[k])
+// 		}
+// 	}
+// 	return as, nil
+// }
 
 // AccountOne example
-func AccountOne(id int) (Account, error) {
-	for _, v := range accounts {
-		if id == v.ID {
-			return v, nil
-		}
-	}
-	return Account{}, nil
-}
+// func AccountOne(id int) (Account, error) {
+// 	for _, v := range accounts {
+// 		if id == v.ID {
+// 			return v, nil
+// 		}
+// 	}
+// 	return Account{}, nil
+// }
 
 // Insert example
-func (a Account) Insert() (int, error) {
-	accountMaxID++
-	a.ID = accountMaxID
-	a.Name = fmt.Sprintf("account_%d", accountMaxID)
-	accounts = append(accounts, a)
-	return accountMaxID, nil
-}
+// func (a Account) Insert() (int, error) {
+// 	accountMaxID++
+// 	a.ID = accountMaxID
+// 	a.Name = fmt.Sprintf("account_%d", accountMaxID)
+// 	accounts = append(accounts, a)
+// 	return accountMaxID, nil
+// }
 
 // Delete example
-func Delete(id int) error {
-	for k, v := range accounts {
-		if id == v.ID {
-			accounts = append(accounts[:k], accounts[k+1:]...)
-			return nil
-		}
-	}
-	return fmt.Errorf("account id=%d is not found", id)
-}
-
-// Update example
-func (a Account) Update() error {
-	for k, v := range accounts {
-		if a.ID == v.ID {
-			accounts[k].Name = a.Name
-			return nil
-		}
-	}
-	return fmt.Errorf("account id=%d is not found", a.ID)
-}
-
-var accountMaxID = 3
-var accounts = []Account{
-	{ID: 1, Name: "account_1"},
-	{ID: 2, Name: "account_2"},
-	{ID: 3, Name: "account_3"},
-}
+// func Delete(id int) error {
+// 	for k, v := range accounts {
+// 		if id == v.ID {
+// 			accounts = append(accounts[:k], accounts[k+1:]...)
+// 			return nil
+// 		}
+// 	}
+// 	return fmt.Errorf("account id=%d is not found", id)
+// }
